fix ropensci/plotly#463 via z-index instead of completely hiding plotly widgets
I think ropensci/plotly#524 should be reverted eventually because it essentially hides plotly widgets when printing ioslides to PDF (unless a widget happens to be on the current slide)

--- a/inst/rmd/ioslides/ioslides-13.5.1/theme/css/default.css
+++ b/inst/rmd/ioslides/ioslides-13.5.1/theme/css/default.css
@@ -271,6 +271,10 @@ slides > slide.past {
 slides > slide.current {
   display: block;
   opacity: 1;
+  z-index: 1;
+}
+slides > slide:not(.current) {
+  z-index: 0;
 }
 /* line 103, ../scss/default.scss */
 slides > slide.current .auto-fadein {
